# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: my_check.yml
gendiff/: __init__.py  cli.py  gendiff.py  generate.py  parser.py
gendiff/format/: plain.py
gendiff/formatters/: formatters.py  formgen.py  json.py  plain.py  stylish.py
gendiff/scripts/: .gitignore  gendiff.py
tests/: test_gendiff.py
tests/fixtures/: correct_outputs.py  correct_yaml.txt
