[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "second Hexlet project"
authors = ["ggByron <shtyrbu.ya@gmail.com>"]
readme = "README.md"
packages = [
    { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.flake8]
ignore = ['E231', 'E241']
per-file-ignores = [
    '__init__.py:F401',
]
max-line-length = 88
count = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
